2001-12-03 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py, pybot/runner.py: New files with new startup system.
	* run, scripts/pybot.py: Removed.
	* *.py: Converted tabs to spaces so people using other editors
	  feel confortable as well (suggested by John Thingstad).

2001-11-14 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/messages.py: Added help.
	* modules/help.py: Reduced load level.
	* module.py, modules/modulecontrol.py: Added handling of load levels,
	  allowing one to control module loading order.

2001-11-13 Gustavo Niemeyer <niemeyer@conectiva.com>
	* option.py: Fixed little bug in Options.getsoft() keepalive handling.
	* modules/{help,plock}.py: Implemented help module, offering an online
	  help api for other modules (have a look at plock.py for an example).
	* social.py: Minor changes.
 
2001-11-01 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot was completely reestructured.

2001-06-12 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py: Now breaking long lines. Other minor changes.
	* modulecontrol.py: Removing module entry, even if the unload fails.

2001-05-22 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/uptime.py: New module.

2001-05-16 Gustavo Niemeyer <niemeyer@conectiva.com>
	* Implemented ModuleMethods. This is a class to handle plugable
	  methods. Every module is now using it instead of assigning
	  methods to the Pybot class.
	* modules/{freshmeat,appwatch,messages,notes,userdata}.py:
	  New modules.
	* modules/timer.py: Changed delay system to use time.time() instead
	  of decreasing the time to 0.
	* modules/ignore.py: Fixed dontignore().
	* modules/options.py: Fixed setting of empty ([] and {}) options.
	* modules/social.py: A few new socializations.

2001-05-15 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py:
	  - Now using a re to check if a message is directed to the bot.
	  - Implemented msg.answertarget.

2001-04-29 Gustavo Niemeyer <niemeyer@conectiva.com>