@@ -1,3 +1,6 @@
+2002-04-03 Gustavo Niemeyer <niemeyer@conectiva.com>
+	* scripts/pybot.py: Fixed.
+
 2001-12-03 Gustavo Niemeyer <niemeyer@conectiva.com>
 	* pybot.py, pybot/runner.py: New files with new startup system.
 	* run, scripts/pybot.py: Removed.
